[package]
name = "quar"
version = "0.1.0"
authors = ["Joash Christian Liwanag <nightlock0326@gmail.com>"]
edition = "2018"
description = "A QR code reader and encoder program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
rqrr = "0.3.1"
image = "0.23.13"
